--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,25 +2,9 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - name: Install Kubernetes tools
+  - name: Start kind cluster
     init: |
-      # Install kubectl
-      curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-      sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-      
-      # Install minikube
-      curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-      sudo install minikube-linux-amd64 /usr/local/bin/minikube
+      kind create cluster
     command: |
-      # Start minikube
-      minikube start --driver=docker
-      
-      echo "Kubernetes tools are ready!"
-      echo "kubectl version: $(kubectl version --short)"
-      echo "minikube version: $(minikube version --short)"
-
-ports:
-  - port: 8080
-    onOpen: ignore
-  - port: 30000-32767
-    onOpen: ignore # NodePort range
+      kubectl cluster-info
+      kubectl get nodes
