--- a/exercises/1-basics/services/01-clusterip-service.yaml
+++ b/exercises/1-basics/services/01-clusterip-service.yaml
@@ -3,13 +3,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service-internal
+  name: nginx-service
 spec:
-  type: ClusterIP          # Default service type for internal cluster access
-  selector:                # Select pods with these labels
-    app: web              # Match our pod's labels
-    tier: frontend
+  selector:
+    app: nginx
+    version: blue  # Switch back to blue deployment
   ports:
     - protocol: TCP
-      port: 80            # Port the service listens on
-      targetPort: 80      # Port to forward to in the pod
+      port: 80
+      targetPort: 80
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service-canary
+spec:
+  selector:
+    app: nginx
+    version: stable  # Initially route to stable version
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
