--- a/exercises/1-basics/services/02-nodeport-service.yaml
+++ b/exercises/1-basics/services/02-nodeport-service.yaml
@@ -14,3 +14,29 @@ spec:
       port: 80            # Port the service listens on
       targetPort: 80      # Port to forward to in the pod
       nodePort: 30080     # External port (must be between 30000-32767)
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service-stable
+spec:
+  selector:
+    app: nginx
+    version: stable
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service-canary
+spec:
+  selector:
+    app: nginx
+    version: canary
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
