--- a/exercises/2-intermediate/config/01-webapp-crd.yaml
+++ b/exercises/2-intermediate/config/01-webapp-crd.yaml
@@ -27,9 +27,45 @@ spec:
                   type: string
                 port:
                   type: integer
+                  minimum: 1
+                  maximum: 65535
                 replicas:
                   type: integer
                   minimum: 1
+                domains:
+                  type: array
+                  items:
+                    type: string
+                    pattern: '^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$'
+                ssl:
+                  type: object
+                  properties:
+                    enabled:
+                      type: boolean
+                    secretName:
+                      type: string
+                  required: ['enabled']
+                resources:
+                  type: object
+                  properties:
+                    limits:
+                      type: object
+                      properties:
+                        cpu:
+                          type: string
+                          pattern: '^[0-9]+m?$'
+                        memory:
+                          type: string
+                          pattern: '^[0-9]+(Ki|Mi|Gi)$'
+                    requests:
+                      type: object
+                      properties:
+                        cpu:
+                          type: string
+                          pattern: '^[0-9]+m?$'
+                        memory:
+                          type: string
+                          pattern: '^[0-9]+(Ki|Mi|Gi)$'
               required:
                 - image
                 - port
