--- a/exercises/2-intermediate/deployments/06-ratings-v2.yaml
+++ b/exercises/2-intermediate/deployments/06-ratings-v2.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: ratings
-        image: docker.io/istio/examples-bookinfo-ratings-v2:1.16.2
+        image: isadeveloper17/ratings-v2-custom
         ports:
         - containerPort: 9080
         securityContext:
