Revert "adjusting names for easier understanding of whats being worked on."
This reverts commit 799b0a0a117a75dd8addb03f36cfbf24551b86c4.

--- a/exercises/2-intermediate/deployments/06-ratings-v2.yaml
+++ b/exercises/2-intermediate/deployments/06-ratings-v2.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: ratings
-        image: isadeveloper17/ratings-v2-custom
+        image: docker.io/istio/examples-bookinfo-ratings-v2:1.16.2
         ports:
         - containerPort: 9080
         securityContext:
